// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests ConditionsRatings Component accepts custom properties 1`] = `undefined`;

exports[`tests ConditionsRatings Component should render correctly 1`] = `
<ForwardRef(Bootstrap(Container))
  className="ConditionsRatings"
>
  <ForwardRef(Bootstrap(Row))>
    <ForwardRef(Bootstrap(Col))
      lg={6}
      md={6}
      sm={12}
      xs={12}
    >
      <CondtionsRow
        rating={1}
        title="Accuracy"
      />
      <CondtionsRow
        rating={1}
        title="Communication"
      />
      <CondtionsRow
        rating={1}
        title="Cleanliness"
      />
    </ForwardRef(Bootstrap(Col))>
    <ForwardRef(Bootstrap(Col))
      lg={6}
      md={6}
      sm={12}
      xs={12}
    >
       
      <CondtionsRow
        rating={1}
        title="Location"
      />
      <CondtionsRow
        rating={1}
        title="Check In"
      />
      <CondtionsRow
        rating={1}
        title="Value"
      />
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Row))>
</ForwardRef(Bootstrap(Container))>
`;

exports[`tests ConditionsRow component should render correctly 1`] = `
<ForwardRef(Bootstrap(Row))
  className="top-star-spacing"
>
  <ForwardRef(Bootstrap(Col))
    className="title"
  >
    <span>
      title
    </span>
  </ForwardRef(Bootstrap(Col))>
  <ForwardRef(Bootstrap(Col))>
     
    <i
      className="fas fa-star stars"
      key="0"
    />
    <i
      className="fas fa-star stars"
      key="1"
    />
    <i
      className="fas fa-star stars"
      key="2"
    />
    <i
      className="fas fa-star stars"
      key="3"
    />
    <i
      className="fas fa-star stars"
      key="4"
    />
  </ForwardRef(Bootstrap(Col))>
</ForwardRef(Bootstrap(Row))>
`;

exports[`tests DropdownSearch component should render correctly 1`] = `
<ForwardRef(Bootstrap(Col))
  className="dropdown-column"
  lg="3"
  md={true}
  sm={true}
  xs={true}
>
  <DropdownButton
    id="dropdown-basic-button"
    onSelect={[Function]}
    title="Most recent"
    variant="light"
  >
    <ForwardRef(ContextTransform)
      eventKey="recent"
    >
      Most recent
    </ForwardRef(ContextTransform)>
    <ForwardRef(ContextTransform)
      eventKey="relevant"
    >
      Most relevant
    </ForwardRef(ContextTransform)>
  </DropdownButton>
</ForwardRef(Bootstrap(Col))>
`;

exports[`tests ReviewCount Component should render correctly in "debug" mode 1`] = `
<ForwardRef(Bootstrap(Col))
  className="bottom-spacing"
  lg={12}
  md={12}
  xs={12}
>
  <h3
    className="ReviewCount"
  >
     Reviews 
    <i
      className="fas fa-star blank-star"
      key="0"
    />
    <i
      className="fas fa-star blank-star"
      key="1"
    />
    <i
      className="fas fa-star blank-star"
      key="2"
    />
    <i
      className="fas fa-star blank-star"
      key="3"
    />
    <i
      className="fas fa-star blank-star"
      key="4"
    />
  </h3>
</ForwardRef(Bootstrap(Col))>
`;

exports[`tests ReviewEntry Component renders an image 1`] = `undefined`;

exports[`tests ReviewList Component should render correctly in "debug" mode 1`] = `
<div>
  <ForwardRef(Bootstrap(Container))>
    <ForwardRef(Bootstrap(Col))
      className="text-center"
    >
      <ForwardRef(Bootstrap(Row)) />
      <ForwardRef(Bootstrap(Row))>
        <Pagination
          initialPage={1}
          items={
            Object {
              "description": "Sodales mus cras fermentum hendrerit lorem. Sagittis hendrerit cubilia tincidunt nibh tortor posuere parturient quam consequat. Habitasse nec id massa nec tincidunt platea. Felis aliquam sed eget amet tortor quam. Condimentum ad. Ac condimentum, varius torquent posuere placerat faucibus fames etiam massa blandit platea ad eget venenatis nulla curabitur lectus turpis sociosqu imperdiet iaculis porttitor vitae tristique est parturient bibendum molestie non aenean semper montes ridiculus per. Mus. Dui leo ante nascetur aliquam urna quam, dignissim sit torquent ante. Facilisis. Metus. Pellentesque vel maecenas amet donec fringilla mus senectus. Curabitur suspendisse elit consectetuer placerat auctor etiam mattis sociosqu. Ridiculus ullamcorper felis sed hymenaeos Vitae, curabitur nunc metus platea aenean id ut vestibulum senectus. Feugiat hymenaeos nullam hymenaeos netus volutpat class aptent senectus est fusce urna torquent rutrum. Vel suspendisse.",
              "image_url": "image",
              "username": "dawn",
            }
          }
          onChangePage={[Function]}
          pageSize={10}
        />
      </ForwardRef(Bootstrap(Row))>
    </ForwardRef(Bootstrap(Col))>
  </ForwardRef(Bootstrap(Container))>
  <hr />
</div>
`;

exports[`tests SearchReviews Component should be possible to generate search critera with enter 1`] = `
<SearchReviews>
  <ForwardRef(Bootstrap(Col))
    className="form-group input-group"
    lg="4"
    md={true}
    sm={true}
    xs={true}
  >
    <Col
      as="div"
      bsPrefix="col"
      className="form-group input-group"
      lg="4"
      md={true}
      sm={true}
      xs={true}
    >
      <div
        className="form-group input-group col-lg-4 col-md col-sm col"
      >
        <div
          className="input-group-prepend"
        >
          <span
            className="input-group-text"
          >
            <i
              className="fas fa-search"
            />
          </span>
        </div>
        <input
          className="form-control"
          onKeyPress={[Function]}
          placeholder="Search reviews"
          type="text"
        />
      </div>
    </Col>
  </ForwardRef(Bootstrap(Col))>
</SearchReviews>
`;

exports[`tests SearchReviews Component should preventDefault when user presses enter on searching for reviews 1`] = `
<ForwardRef(Bootstrap(Col))
  className="form-group input-group"
  lg="4"
  md={true}
  sm={true}
  xs={true}
>
  <div
    className="input-group-prepend"
  >
    <span
      className="input-group-text"
    >
      <i
        className="fas fa-search"
      />
    </span>
  </div>
  <input
    className="form-control"
    onKeyPress={[Function]}
    placeholder="Search reviews"
    type="text"
  />
</ForwardRef(Bootstrap(Col))>
`;

exports[`tests SearchReviews Component should preventDefault when user presses enter on searching for reviews 2`] = `
<ForwardRef(Bootstrap(Col))
  className="form-group input-group"
  lg="4"
  md={true}
  sm={true}
  xs={true}
>
  <div
    className="input-group-prepend"
  >
    <span
      className="input-group-text"
    >
      <i
        className="fas fa-search"
      />
    </span>
  </div>
  <input
    className="form-control"
    onKeyPress={[Function]}
    placeholder="Search reviews"
    type="text"
  />
</ForwardRef(Bootstrap(Col))>
`;

exports[`tests SearchReviews Component should render correctly 1`] = `
<ForwardRef(Bootstrap(Col))
  className="form-group input-group"
  lg="4"
  md={true}
  sm={true}
  xs={true}
>
  <div
    className="input-group-prepend"
  >
    <span
      className="input-group-text"
    >
      <i
        className="fas fa-search"
      />
    </span>
  </div>
  <input
    className="form-control"
    onKeyPress={[Function]}
    placeholder="Search reviews"
    type="text"
  />
</ForwardRef(Bootstrap(Col))>
`;
